@@ -8,11 +8,11 @@ matlab <- function() {
   "The following functions are emulations of corresponding Matlab functions",
   "and bear the same signature as their Matlab cousins as far as possible:",
   "
-  accumarray, acot, acoth, acsc, acsch, and, angle, ans, asec, asech,
+  accumarray, acot, acoth, acsc, acsch, and, angle, ans, arrayfun, asec, asech,
   beep, blank, blkdiag, bsxfun,
   cart2pol, cart2sph, cd, ceil, circshift, clear, compan, cond, conv,
       cot, coth, cross, csc, csch,
-  deblank, deconv, deg2rad, detrend, deval, disp, dot,
+  dblquad, deblank, deconv, deg2rad, detrend, deval, disp, dot,
   eig, eigint, ellipj, ellipke, erf, erfc, erfcinv, erfcx, erfi, erfinv,
       errorbar, expint, expm, eye, ezcontour, ezmesh, ezplot, ezpolar,
   fact, factors, fftshift, figure, findpeaks, findstr, flipdim, fliplr,
@@ -35,7 +35,7 @@ matlab <- function() {
   sec, sech, semilogx, semilogy, sinc, size, sortrows, sph2cart, sqrtm,
       std, str2num, strcat, strcmp, strcmpi, strfind, strfindi, strjust,
       strrep, subspace,
-  tic, toc, trapz, tril, trimmean, triu,
+  tic, toc, trapz, tril, trimmean, triplequad, triu,
   vander, vectorfield, ver,
   what, who, whos, wilkinson,
   zeros, zeta.",
