@@ -64,11 +64,11 @@ Practical Numerical Math Routines
   The following 200 functions are emulations of correspondingly named Matlab 
   functions and bear the same signature as their Matlab cousins if possible:
   
-  \code{accumarray, acot, acoth, acsc, acsch, and, angle, ans, asec, asech,}\cr
+  \code{accumarray, acot, acoth, acsc, acsch, and, angle, ans, arrayfun, asec, asech,}\cr
   \code{beep, blank, blkdiag, bsxfun,}\cr
   \code{cart2pol, cart2sph, cd, ceil, circshift, clear, compan, cond, conv,}\cr
   \code{    cot, coth, cross, csc, csch,}\cr
-  \code{deblank, deconv, deg2rad, detrend, deval, disp, dot,}\cr
+  \code{dblquad, deblank, deconv, deg2rad, detrend, deval, disp, dot,}\cr
   \code{eig, eigint, ellipj, ellipke, erf, erfc, erfcinv, erfcx, erfi, erfinv,}\cr
   \code{    errorbar, expint, expm, eye, ezcontour, ezmesh, ezplot, ezpolar,}\cr
   \code{fact, factors, fftshift, figure, findpeaks, findstr, flipdim, fliplr,}\cr
@@ -91,7 +91,7 @@ Practical Numerical Math Routines
   \code{sec, sech, semilogx, semilogy, sinc, size, sortrows, sph2cart, sqrtm,}\cr
   \code{    std, str2num, strcat, strcmp, strcmpi, strfind, strfindi, strjust,}\cr
   \code{    strrep, subspace,}\cr
-  \code{tic, toc, trapz, tril, trimmean, triu,}\cr
+  \code{tic, toc, trapz, tril, trimmean, triplequad, triu,}\cr
   \code{vander, vectorfield, ver,}\cr
   \code{what, who, whos, wilkinson,}\cr
   \code{zeros, zeta}
