@@ -8,6 +8,7 @@ CHANGES IN VERSION 1.4.4 (2013-03-13)
     o integral2() implements the two-dimensional numerical integration
       approach `TwoD', i.e. Gauss-Kronrod (3, 7)-points on rectangles.
     o integral3() three-dimensional integration based on integral2().
+    o triplequad() 3-dim. integration based on dblquad() (Matlab style).
 
 CHANGES IN VERSION 1.4.3 (2013-03-10)
 
